Add more keywords

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     valuation when it comes to your vehicle insurance needs. Our team of experienced auto appraisers is
     dedicated to providing thorough and impartial assessments to ensure you receive the coverage you deserve.">
   <meta name="keywords" content="grand rapids, michigan, insurance, insurance appraisal, harry's appraisal,
-    vehicle appraisal, appraisal, custom, vintage, classic">
+    vehicle appraisal, appraisal, custom, vintage, classic, car appraisal, truck appraisal">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
