#1: Add link preview meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <meta name="description" content="  Welcome to Harry's Appraisals, your trusted partner for accurate and
+  <meta name="description" content="Welcome to Harry's Appraisals, your trusted partner for accurate and
     reliable automobile insurance appraisals. At Harry's Appraisals, we understand the importance of precise
     valuation when it comes to your vehicle insurance needs. Our team of experienced auto appraisers is
     dedicated to providing thorough and impartial assessments to ensure you receive the coverage you deserve.">
-  <meta name="og:description" content="  Welcome to Harry's Appraisals, your trusted partner for accurate and
+  <meta name="og:description" content="Welcome to Harry's Appraisals, your trusted partner for accurate and
     reliable automobile insurance appraisals. At Harry's Appraisals, we understand the importance of precise
     valuation when it comes to your vehicle insurance needs. Our team of experienced auto appraisers is
     dedicated to providing thorough and impartial assessments to ensure you receive the coverage you deserve.">
   <meta name="keywords" content="grand rapids, michigan, insurance, insurance appraisal, harry's appraisal,
-    vehicle appraisal, appraisal, custom, vintage, classic, car appraisal, truck appraisal">
+    vehicle appraisal, appraisal, automobile appraisal, auto appraisal, custom, vintage, classic, car appraisal, truck appraisal">
+  <meta property="og:title" content="Harry's Appraisals">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://www.harrysappraisals.com/assets/harrys-logo.png">
+  <meta property="og:url" content="https://www.harrysappraisals.com">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
