--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DNT3HHMCQ9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DNT3HHMCQ9');
+  </script>
   <meta charset="utf-8">
   <title>Harry's Appraisals</title>
   <base href="/">
